--- a/src/components/detail/detail.css
+++ b/src/components/detail/detail.css
@@ -2,6 +2,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 }
 
 .detail .user {
