--- a/src/index.css
+++ b/src/index.css
@@ -17,13 +17,14 @@ body {
 }
 
 .container {
-  width: 80vw;
-  height: 90vh;
+  display: flex;
+  flex-direction: row;
+  min-width: 90vw;
+  max-height: 90vh;
   background-color: rgba(17, 25, 40, 0.75);
   backdrop-filter: blur(19px) saturate(180%);
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.125);
-  display: flex;
 }
 
 ::-webkit-scrollbar {
